--- a/sass/style.scss
+++ b/sass/style.scss
@@ -64,11 +64,17 @@
 
 }
 
-
+.fullScreen {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
 
 .full{
 	width:100% !important;
-    @include animacion(height, 0.3s);
+	@include animacion(height, 0.3s);
 }
 
  
